--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta http-equiv="content-type" content="text/html" charset="UTF-8"/>
 </head>
 <body>
-
 <div class="container">
     <div th:fragment="header">
         <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#" th:href="@{/}">Home</a>
-                    <ul class="nav navbar-nav">
-                        <li><a href="#" th:href="@{/book/new}">Create new Book</a></li>
-                    </ul>
-                </div>
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#" th:href="@{/}">Home</a>
+                <ul class="nav navbar-nav">
+                    <li><a href="#" th:href="@{/book/new}">Create new Book</a></li>
+                </ul>
+                <a class="navbar-brand" href="#" th:href="@{/undo}">Undo</a>
             </div>
         </nav>
 
         <div class="jumbotron">
             <div class="row text-center">
-                <h2>Th Wo - BookShelf</h2>
+                <h3>BookShelf</h3>
             </div>
         </div>
     </div>
